--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "typescript-blockchain",
   "version": "1.0.0",
   "description": "",
-  "scripts": {},
+  "scripts": {
+    "build": "tsc"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
